<resources>
    <!-- nombre app -->
    <string name="app_name">Grupo1_TP3</string>
    <!-- label activity main -->
    <string name="label_main">Parking control</string>
    <string name="texto_bienvenida">Bienvenido a parking system</string>
    <string name="texto_empezar">Inicia sesión para empezar</string>
    <string name="texto_usuario">Nombre de usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="iniciar_sesion">INICIAR SESIÓN</string>
    <string name="registrarse">Registrarse</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Datos de Usuario</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_Parking">Parking Control</string>

    <!--stings de activity registro -->

    <string name="registrarseHeader"> Registrarse</string>
    <string name="Nombre">Nombre</string>
    <string name="Correo">Correo electrónico</string>
    <string name="contrasenia">Contraseña</string>
    <string name="repertir_contrasenia">Repetir contraseña</string>
    <string name="aceptar">Aceptar</string>
    <string name="menu_parqueos">Parqueos</string>
    <string name="menu_micuenta">Mi Cuenta</string>
    <string name="Cerrar_Sesion">Cerrar Sesion</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>



</resources>